--- a/fastly.toml
+++ b/fastly.toml
@@ -3,3 +3,4 @@ name = "Empty starter for Rust"
 description = "An empty starter kit project template."
 authors = ["<oss@fastly.com>"]
 language = "rust"
+service_id = "KEjQjN2Xg7rPcT07OH49X3"
